--- a/lib/l10n/app_zh-tc.arb
+++ b/lib/l10n/app_zh-tc.arb
@@ -50,7 +50,8 @@
     "placeholders": {
       "percent": {
         "example": "29",
-        "description": "分析百分"
+        "description": "分析百分",
+        "type": "Object"
       }
     }
   },
@@ -60,7 +61,8 @@
     "placeholders": {
       "count": {
         "example": "29",
-        "description": "視頻數"
+        "description": "視頻數",
+        "type": "Object"
       }
     }
   },
@@ -80,7 +82,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -90,7 +93,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -100,7 +104,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -110,7 +115,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -120,7 +126,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -130,7 +137,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -140,7 +148,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   },
@@ -150,7 +159,8 @@
     "placeholders": {
       "title": {
         "example": "世界上集錦視頻",
-        "description": "視頻的標題"
+        "description": "視頻的標題",
+        "type": "Object"
       }
     }
   }
