change ffmpeg engine (android/ios/macos) add analyse content from mp3 audio only (for now)

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -45,6 +45,8 @@
   "trackID3FieldAlbum": "Album",
   "trackID3Action": "Update",
 
+  "trackAITooltip": "Get your transcription from your audio",
+
   "playlistParsing": "Playlist parsing: {percent}%",
   "@playlistParsing": {
     "placeholders": {
