--- a/lib/l10n/app_ur.arb
+++ b/lib/l10n/app_ur.arb
@@ -15,6 +15,8 @@
   "credits": "Application credits",
   "credits_content": "Graphics: https://www.flaticon.com/authors/freepik\nOriginal Author: https://github.com/Hexer10\nModified: https://github.com/mickbad",
 
+  "trackAITooltip": "Get your transcription from your audio",
+
   "downloads": "ڈاؤن لوڈز",
   "author": "مصنف",
 
